UserResponseDtoをControllerで使用/swaggerの更新
